- Due to this, remove editPacketFilter command
- Reload packet filter only if it's enabled
- Implement configuration for firewall state. Disable is written, Enable by default
- Fix malloc warnings on compilation
- Fix strcmp, strcat warnings on compilation
- Implement show firewall stats to get stats from PacketFilter

Alpha 0.12
- Added quick keyword for packetFilter to go out of rules tables when match.
- Added fingerprinting for startup-config and running-config in md5, sha1 and sha256
- Implement no hostname <name>
- Added fingerprinting for pf.conf in md5, sha1 and sha256
- PacketFilter configuration is now written into pf.conf.run and copied into pf.conf when saving firewall
- Save sysctl for mcastrouting and ip routing with fingerprinting

Alpha 0.13
- Some little cleanup
- Create daemon and client sources. Split files between the two things
- Added callback for commands
- Bugfix for send command
- Proper flush for stdout before printing the prompt

Alpha 0.14
- Implement no ip route
- Bug fix for adding routes
- Now reading startup config on daemon start, not running-config
- Write hostname in system file /etc/myname
- Implement ip name-server to set the main ns for the router
- Implement no access-list <name> with proper memory handling
- Proper memory handling for no ip route

Alpha 0.15
- Check integrity of the configuration files
- Move execSystemCommand to sysunix.h
- Little improvement to reset prompt color
- Refund the prints when the daemon starts

Alpha 0.16
- Remove direction param from access_control structure
- Little change for checkSystemIntegrity()
- Implement removing special ACLs from an access-list
- Improve code performance for adding acl
- Implement no ip access-group <name> in/out

Alpha 0.17
- Implement nameserver configuration (ip name-server and ip domain-name)
- Also implement linked no commands
- Init empty buffer for execSystemCommand
- Also fix the major bug into client. Some buffers are not initialized empty => Buffer overflow